@@ -1,0 +1,3 @@
+# Set of all available languages
+# http://www.gnu.org/software/autoconf/manual/gettext/po_002fLINGUAS.html
+en da de fr es nl ru
