@@ -1,5 +1,11 @@
 2008-10-23  Sam Steingold  <sds@gnu.org>
 
+	* configure.in (ALL_LINGUAS): remove obsolete variable, use ...
+	* po/LINGUAS: new file, keep the list of languags here
+	* makemake.in: use it
+
+2008-10-23  Sam Steingold  <sds@gnu.org>
+
 	* version.sh: 2.47 (2008-10-23)
 
 2008-10-23  Sam Steingold  <sds@gnu.org>
